# serializer version: 1
# name: test_query[YAMLConfigFile-desc_filter__foo]
  '''
  o P3 240510#21 Some foobar todo.
  o P3 240510#26 Some foobar todo.
  - 240510#0P This note has a single-line bullet property.
    * foo:: bar baz buz
  - 240510#1c foobar
  
  '''
# ---
# name: test_query[YAMLConfigFile-desc_filter__foo_double_quote]
  '''
  o P3 240510#21 Some foobar todo.
  o P3 240510#26 Some foobar todo.
  - 240510#0P This note has a single-line bullet property.
    * foo:: bar baz buz
  - 240510#1c foobar
  
  '''
# ---
# name: test_query[YAMLConfigFile-desc_filter__s_u_p]
  '''
  ################################ [[20240323]]
  - 240323#0L +zorg Parametrize test_run_compile()
  - 240323#0M +zorg Move models.py and file_groups.py
  - 240323#0Z +zorg Updated grammar to handle quotes
  - 240323#0a +laundry wip: fold darks
  
  ################################ [[links]]
  - 240510#05 Some note with a link in parens and a block-level link ([[buz#fuzz]]).
  - 240510#04 Some note with duplicate links, like [[poop]] and [[poop]].
  
  ################################ [[property]]
  o P3 240510#0N This recurring todo also uses an inline property | [recur::M+Th]
  ~ P3 240613 240510#0R A canceled todo with a multiline explanation
    * x:: This todo was not really canceled. It is an example todo used to
      demonstrate a multiline bullet property.
  - 240330#02 This note contains a key::value pair.
  - 240510#0P This note has a single-line bullet property.
    * foo:: bar baz buz
  - 240510#0Q q:: Can a note headline use a bullet property or do bullet
    properties need to be defined _under_ the headline?
    * a:: Yes! Bullet properties are powerful!
  
  ################################ [[scrambled_prj_notes]]
  - 240510#0M Reqzlu Zkba Inzlqq Zusqxur: pclx://hn/oqdu-syxf-oxzpzp-hxdszea
  - 240510#0N Tzus %clyzajrm: +cmeq ylevgv frxb gevcfp xa 26cb
  - 240510#0d bhkh://xzywfi3/relyocplej/dpw/qk/otehzx/qpsiyunh/rgthilw_sldeu/fonvlqflxv/rjluzb/tbf/hrtkdrq_mnurg_eltj_szkb.raja
  - 240510#0e knlo://evfkaz3/kmxgifnodz/wav/nz/idlwsr/oslzcscp/raarqgi_bjfdp/xftsdpbcka/itulza/prk/pkgxzoc_zgntm_txeg_npbvju.jldf
  - 240510#0h Nyhha trra://hk/wyp-slg-lbyuqz pris oiqf nywj kg smoy nwdraivpht() cu jzusgcwm zwyirs?
  - 240510#0k Wouvp rx cmmi jk zes r kv/u1abtunoeaorevyolmef: "Njwb opjiv wlyvyfrb; tqcwkrs qlawalk: 200F."
  - 240510#0m e2.0 xrestv rlqt cszmjhp: 1) Cnelcge 2) uttnzeu tncj 3) Rasemja zzvilcys
  - 240510#0n Qtvhtfc ywtyvbppqu (qs odvqdfjk nydxt):
  - 240510#0t HU: Yoxlnl   | Kyahuurpzq mt VV (v.u. boh coveshbg rsp hbyhmm-pav)
  - 240510#16 Nid bzvqqd gktb uhwgmwk jfiwf atukar oq znzg-htqz bpba?: (<izljyv_dk_ebsiqu>)
  - 240510#1H qiuz/adb/lhwggp/kqt/ldmqosmbs/qtjvrxutayfiyh/oocyfjbnuih/jmov/faaat/XibsjbhuFsbuRrawDgfksjcXwjudTvvzbxa.vvep
  - 240510#1J Ajbss udcor xf tylgpk:
  - 240510#1L oiuglzpuv.xwhjvfwrs_imjxfgwoo.fvyclrkt_vqycmgeuj_ihblc
  - 240510#1M ycdcddvhw.shmlpcnju_chsokpadf.bcpgad_hoargfl_fhzshiqoe_qrsrxtdsq
  - 240510#1N bpeijqkwt.ysazfxpem_tnpnkohdy.nppowgku_kqhexqeih_njhno
  - 240510#1W Fbtqtkb, fywupn qr mzrgsvqve 14521641
  - 240510#1b Zee-lpfg uqogce bk khxsvgrkq bbgvmf
  
  ################################ [[subnotes]]
  o P3 240510#1t This todo has checkboxes
    * [X] Done subtask
    * [ ] Open subtask
  - 240510#1m This note contains a key::value pair.
  
  ################################ [[tags_and_ids]]
  - 301231#X0 When I talk to %pig I always want to @puke. | id::pig_is_gross
  
  '''
# ---
# name: test_query[YAMLConfigFile-file_filter__ends_with_s]
  '''
  ################################ [[links]]
  - 240510#03 Some note with a [[bar.sh]] link to a bash script.
  - 240510#04 Some note with a link in parens (see [[baz]]).
  - 240510#05 Some note with a link in parens and a block-level link ([[buz#fuzz]]).
  - 240510#06 Some note with no targets.
  - 240510#07 Some note that references a local [240510#03] ZID.
  - 240510#08 Some note that references a local [1] link.
  - 240510#09 Some note that references an ID in another file | [#pig_is_gross]
  - 240510#04 Some note with duplicate links, like [[poop]] and [[poop]].
  - 240510#07 Some note that references a ZID in another file. See [240408#0X].
  - 240510#09 id::1 http://www.example.com
  
  ################################ [[multiblocks]]
  o P3 240510#07 Some todo
  o P3 240510#08 Another related todo
  o P3 240510#0A Some other todo
  - 240510#09 A note about life...
  - 240510#0B With a note
  - 240510#0C Some note in section 0
  - 240510#0D Note A1
  - 240510#0E Note A2
  - 240510#0F Note B
  - 240510#0G Note C
  - 240510#0H Note D
  - 240510#0J Note E
  
  ################################ [[scrambled_prj_notes]]
  - 240510#0L Sqtdicu Gfwebkj: fdxd://rd/czge-nxgz-vmuncaf
  - 240510#0M Reqzlu Zkba Inzlqq Zusqxur: pclx://hn/oqdu-syxf-oxzpzp-hxdszea
  - 240510#0N Tzus %clyzajrm: +cmeq ylevgv frxb gevcfp xa 26cb
  - 240510#0P Eongcgfy tho pscz giwq arjebc@?
  - 240510#0R Crxekimyx kq fjboaq:
  - 240510#0T Lcnoajccb Injdqwlf
  - 240510#0U Lrry-Jhfv Nfsw
  - 240510#0V Ga Ewwnanwqgoq
  - 240510#0W Gaonrjmk: Cbnuev, Xvdgisy, Aeyfbb?
  - 240510#0X Vont ywgotqe vndsv (lfqbnlfar, kwmnafb, Yneicgqi/Mxvvkclvzk)
  - 240510#0Y Eyfptapyh ijmfacppn (lqrui ?jr=HF)
  - 240510#0Z Gziien fxfmhul
  - 240510#0a Ajfn dz Rhyt (ty 6499 cw 6075)
  - 240510#0b setw://fq/zfv-haow-micxv
  - 240510#0c sorj
  - 240510#0d bhkh://xzywfi3/relyocplej/dpw/qk/otehzx/qpsiyunh/rgthilw_sldeu/fonvlqflxv/rjluzb/tbf/hrtkdrq_mnurg_eltj_szkb.raja
  - 240510#0e knlo://evfkaz3/kmxgifnodz/wav/nz/idlwsr/oslzcscp/raarqgi_bjfdp/xftsdpbcka/itulza/prk/pkgxzoc_zgntm_txeg_npbvju.jldf
  - 240510#0f ykseciqhy IG: bp/531522711
  - 240510#0h Nyhha trra://hk/wyp-slg-lbyuqz pris oiqf nywj kg smoy nwdraivpht() cu jzusgcwm zwyirs?
  - 240510#0k Wouvp rx cmmi jk zes r kv/u1abtunoeaorevyolmef: "Njwb opjiv wlyvyfrb; tqcwkrs qlawalk: 200F."
  - 240510#0m e2.0 xrestv rlqt cszmjhp: 1) Cnelcge 2) uttnzeu tncj 3) Rasemja zzvilcys
  - 240510#0n Qtvhtfc ywtyvbppqu (qs odvqdfjk nydxt):
  - 240510#0o XC: Wvlotmog | Akjrgluk cck dpvcvia
  - 240510#0r Oers Higwy   | NYS / Cyuxu fyod mrfwalatc
  - 240510#0s Lveg         | Kfvunvqioefmgo Rlqu
  - 240510#0t HU: Yoxlnl   | Kyahuurpzq mt VV (v.u. boh coveshbg rsp hbyhmm-pav)
  - 240510#0u TbuburbQuf zilo hpfu://wz/ytg:hep_epzc_ek_jehnmz?h=omm:cpdu :
      (2576796, 2584174, 2585902, 2611556, 2612222)
  - 240510#0v Kmue izlgeghae jivs kkhoh:
      (23068288959, 23070555923, 23071198233, 23081557400, 23082128453)
  - 240510#0w KU onbf
  - 240510#0x Adah wv wsr: Pwyv qrykrmat
  - 240510#0z Fjdu lk aozqwmt rdtv (ingu yhlzh kha zro zstolomj?): Vujflym
  - 240510#10 Cyuyngz rpzj (<tzcx_zm> nat <iqge_xqu>): Opalekb / Ubq hefcgpa
  - 240510#11 Snke udr djwhji ku iysauiroj (<wtflgi_jw_aykjvl>):
  - 240510#12 Puny mng lomkrpd
  - 240510#13 Eipahnv
  - 240510#14 <olxh_cqe>
  - 240510#15 Fe dxiovcyxz kuirhi: Kjwjjl hxd: <lllwcz_bp_mjklvt>\wZkzuguo/yckqyt: <awqxbdj>
  - 240510#16 Nid bzvqqd gktb uhwgmwk jfiwf atukar oq znzg-htqz bpba?: (<izljyv_dk_ebsiqu>)
  - 240510#17 Poxi hdtlblgq:
  - 240510#18 Uripbc uui qr njuytfkxf
  - 240510#19 Dvfbqlk/ignpsr lb imwgiazpd
  - 240510#1A Rb rnfqqbizlps
  - 240510#1B Wuxpotyb:
  - 240510#1C Me fkf zddkb?
  - 240510#1D An fsqw hdegvhwy?
  - 240510#1E Tyrgbh iwj fcq jjuea qpltzla rkyq br at DS tfvwjwf?
  - 240510#1F Rmy [[eswz_xqow::empiz_ljyiwjbmi_szstj]]
  - 240510#1G nejo/vpe/gjggaa/fwi/kgrtqhtdy/ynbwnm/qekadk/cvhc/MqgomkswAgbkGhthPoqfvqt.ednt
  - 240510#1H qiuz/adb/lhwggp/kqt/ldmqosmbs/qtjvrxutayfiyh/oocyfjbnuih/jmov/faaat/XibsjbhuFsbuRrawDgfksjcXwjudTvvzbxa.vvep
  - 240510#1J Ajbss udcor xf tylgpk:
  - 240510#1K ibmxadcdz.iwmdvsxeg_uxzvuntgl
  - 240510#1L oiuglzpuv.xwhjvfwrs_imjxfgwoo.fvyclrkt_vqycmgeuj_ihblc
  - 240510#1M ycdcddvhw.shmlpcnju_chsokpadf.bcpgad_hoargfl_fhzshiqoe_qrsrxtdsq
  - 240510#1N bpeijqkwt.ysazfxpem_tnpnkohdy.nppowgku_kqhexqeih_njhno
  - 240510#1P uceq://ap/591285707
  - 240510#1R Git [[desd_cd_kdzb.yhdxx]] hgq lkl[1] @dzwk
  - 240510#1T Mcjr bdukfjxm 14521206
  - 240510#1U Spuekgphn 14521428
  - 240510#1V Necywz met td fuvbdooge 14524967
  - 240510#1W Fbtqtkb, fywupn qr mzrgsvqve 14521641
  - 240510#1X Uc lsmpfxhtkyh 14522952
  - 240510#1Y Ikr lr 20 pggmb
  - 240510#1Z Ttx-yecb mxovcuwbc
  - 240510#1a Rzq-itde mpfj
  - 240510#1b Zee-lpfg uqogce bk khxsvgrkq bbgvmf
  
  ################################ [[subnotes]]
  o P3 240510#1t This todo has checkboxes
    * [X] Done subtask
    * [ ] Open subtask
  o P3 240510#1d This todo is due::2024-03-30 and has some subnotes
  - 240510#1c foobar
  - 240510#1e Todo subnote A
  - 240510#1f Todo subnote B
  - 240510#1h Todo subsubnote C
  - 240510#1k This note has many subnotes.
  - 240510#1m This note contains a key::value pair.
  - 240510#1n bazbuz
  - 240510#1o pig
  - 240510#1r is fat
  - 240510#1s is stinky
  
  ################################ [[subsections]]
  o P3 240510#1w A todo for something
  o P3 240510#21 Some foobar todo.
  o P3 240510#26 Some foobar todo.
  - 240510#1t Note about A1
  - 240510#1u Note about something
  - 240510#1v Another note
  - 240510#1x A note on the second section.
  - 240510#1z A sub-note.
  - 240510#20 And another note.
  - 240510#22 This is inside of h4_section!
  - 240510#23 A note on the third section.
  - 240510#24 A sub-note.
  - 240510#25 And another note.
  - 240510#27 This is the final section!
  
  ################################ [[tags_and_ids]]
  - 240408#0X Some note
  - 240408#N2 Da nah nah nuh...
  - 240509 240408#0X Some note with a modify date
  - 240510#29 Projects can start with a number, but CANNOT be all numbers
  - 301231#X0 When I talk to %pig I always want to @puke. | id::pig_is_gross
  
  '''
# ---
# name: test_query[YAMLConfigFile-file_filter__has_a_p]
  '''
  ################################ [[priority]]
  o P0 240313#03 High Priority TODO
  o P1 240313#04 Medium Priority TODO
  o P2 240313#05 Low Priority TODO
  
  ################################ [[property]]
  o P3 240510#0K This todo is @due today! | due::2024-03-13
  o P3 240510#0N This recurring todo also uses an inline property | [recur::M+Th]
  ~ P3 240613 240510#0R A canceled todo with a multiline explanation
    * x:: This todo was not really canceled. It is an example todo used to
      demonstrate a multiline bullet property.
  - 240330#02 This note contains a key::value pair.
  - 240510#0P This note has a single-line bullet property.
    * foo:: bar baz buz
  - 240510#0Q q:: Can a note headline use a bullet property or do bullet
    properties need to be defined _under_ the headline?
    * a:: Yes! Bullet properties are powerful!
  - 240510#0M This [type:: awesome note] has an inline property.
  
  ################################ [[scrambled_prj_notes]]
  - 240510#0L Sqtdicu Gfwebkj: fdxd://rd/czge-nxgz-vmuncaf
  - 240510#0M Reqzlu Zkba Inzlqq Zusqxur: pclx://hn/oqdu-syxf-oxzpzp-hxdszea
  - 240510#0N Tzus %clyzajrm: +cmeq ylevgv frxb gevcfp xa 26cb
  - 240510#0P Eongcgfy tho pscz giwq arjebc@?
  - 240510#0R Crxekimyx kq fjboaq:
  - 240510#0T Lcnoajccb Injdqwlf
  - 240510#0U Lrry-Jhfv Nfsw
  - 240510#0V Ga Ewwnanwqgoq
  - 240510#0W Gaonrjmk: Cbnuev, Xvdgisy, Aeyfbb?
  - 240510#0X Vont ywgotqe vndsv (lfqbnlfar, kwmnafb, Yneicgqi/Mxvvkclvzk)
  - 240510#0Y Eyfptapyh ijmfacppn (lqrui ?jr=HF)
  - 240510#0Z Gziien fxfmhul
  - 240510#0a Ajfn dz Rhyt (ty 6499 cw 6075)
  - 240510#0b setw://fq/zfv-haow-micxv
  - 240510#0c sorj
  - 240510#0d bhkh://xzywfi3/relyocplej/dpw/qk/otehzx/qpsiyunh/rgthilw_sldeu/fonvlqflxv/rjluzb/tbf/hrtkdrq_mnurg_eltj_szkb.raja
  - 240510#0e knlo://evfkaz3/kmxgifnodz/wav/nz/idlwsr/oslzcscp/raarqgi_bjfdp/xftsdpbcka/itulza/prk/pkgxzoc_zgntm_txeg_npbvju.jldf
  - 240510#0f ykseciqhy IG: bp/531522711
  - 240510#0h Nyhha trra://hk/wyp-slg-lbyuqz pris oiqf nywj kg smoy nwdraivpht() cu jzusgcwm zwyirs?
  - 240510#0k Wouvp rx cmmi jk zes r kv/u1abtunoeaorevyolmef: "Njwb opjiv wlyvyfrb; tqcwkrs qlawalk: 200F."
  - 240510#0m e2.0 xrestv rlqt cszmjhp: 1) Cnelcge 2) uttnzeu tncj 3) Rasemja zzvilcys
  - 240510#0n Qtvhtfc ywtyvbppqu (qs odvqdfjk nydxt):
  - 240510#0o XC: Wvlotmog | Akjrgluk cck dpvcvia
  - 240510#0r Oers Higwy   | NYS / Cyuxu fyod mrfwalatc
  - 240510#0s Lveg         | Kfvunvqioefmgo Rlqu
  - 240510#0t HU: Yoxlnl   | Kyahuurpzq mt VV (v.u. boh coveshbg rsp hbyhmm-pav)
  - 240510#0u TbuburbQuf zilo hpfu://wz/ytg:hep_epzc_ek_jehnmz?h=omm:cpdu :
      (2576796, 2584174, 2585902, 2611556, 2612222)
  - 240510#0v Kmue izlgeghae jivs kkhoh:
      (23068288959, 23070555923, 23071198233, 23081557400, 23082128453)
  - 240510#0w KU onbf
  - 240510#0x Adah wv wsr: Pwyv qrykrmat
  - 240510#0z Fjdu lk aozqwmt rdtv (ingu yhlzh kha zro zstolomj?): Vujflym
  - 240510#10 Cyuyngz rpzj (<tzcx_zm> nat <iqge_xqu>): Opalekb / Ubq hefcgpa
  - 240510#11 Snke udr djwhji ku iysauiroj (<wtflgi_jw_aykjvl>):
  - 240510#12 Puny mng lomkrpd
  - 240510#13 Eipahnv
  - 240510#14 <olxh_cqe>
  - 240510#15 Fe dxiovcyxz kuirhi: Kjwjjl hxd: <lllwcz_bp_mjklvt>\wZkzuguo/yckqyt: <awqxbdj>
  - 240510#16 Nid bzvqqd gktb uhwgmwk jfiwf atukar oq znzg-htqz bpba?: (<izljyv_dk_ebsiqu>)
  - 240510#17 Poxi hdtlblgq:
  - 240510#18 Uripbc uui qr njuytfkxf
  - 240510#19 Dvfbqlk/ignpsr lb imwgiazpd
  - 240510#1A Rb rnfqqbizlps
  - 240510#1B Wuxpotyb:
  - 240510#1C Me fkf zddkb?
  - 240510#1D An fsqw hdegvhwy?
  - 240510#1E Tyrgbh iwj fcq jjuea qpltzla rkyq br at DS tfvwjwf?
  - 240510#1F Rmy [[eswz_xqow::empiz_ljyiwjbmi_szstj]]
  - 240510#1G nejo/vpe/gjggaa/fwi/kgrtqhtdy/ynbwnm/qekadk/cvhc/MqgomkswAgbkGhthPoqfvqt.ednt
  - 240510#1H qiuz/adb/lhwggp/kqt/ldmqosmbs/qtjvrxutayfiyh/oocyfjbnuih/jmov/faaat/XibsjbhuFsbuRrawDgfksjcXwjudTvvzbxa.vvep
  - 240510#1J Ajbss udcor xf tylgpk:
  - 240510#1K ibmxadcdz.iwmdvsxeg_uxzvuntgl
  - 240510#1L oiuglzpuv.xwhjvfwrs_imjxfgwoo.fvyclrkt_vqycmgeuj_ihblc
  - 240510#1M ycdcddvhw.shmlpcnju_chsokpadf.bcpgad_hoargfl_fhzshiqoe_qrsrxtdsq
  - 240510#1N bpeijqkwt.ysazfxpem_tnpnkohdy.nppowgku_kqhexqeih_njhno
  - 240510#1P uceq://ap/591285707
  - 240510#1R Git [[desd_cd_kdzb.yhdxx]] hgq lkl[1] @dzwk
  - 240510#1T Mcjr bdukfjxm 14521206
  - 240510#1U Spuekgphn 14521428
  - 240510#1V Necywz met td fuvbdooge 14524967
  - 240510#1W Fbtqtkb, fywupn qr mzrgsvqve 14521641
  - 240510#1X Uc lsmpfxhtkyh 14522952
  - 240510#1Y Ikr lr 20 pggmb
  - 240510#1Z Ttx-yecb mxovcuwbc
  - 240510#1a Rzq-itde mpfj
  - 240510#1b Zee-lpfg uqogce bk khxsvgrkq bbgvmf
  
  '''
# ---
# name: test_query[YAMLConfigFile-file_filter__starts_with_p]
  '''
  ################################ [[priority]]
  o P0 240313#03 High Priority TODO
  o P1 240313#04 Medium Priority TODO
  o P2 240313#05 Low Priority TODO
  
  ################################ [[property]]
  o P3 240510#0K This todo is @due today! | due::2024-03-13
  o P3 240510#0N This recurring todo also uses an inline property | [recur::M+Th]
  ~ P3 240613 240510#0R A canceled todo with a multiline explanation
    * x:: This todo was not really canceled. It is an example todo used to
      demonstrate a multiline bullet property.
  - 240330#02 This note contains a key::value pair.
  - 240510#0P This note has a single-line bullet property.
    * foo:: bar baz buz
  - 240510#0Q q:: Can a note headline use a bullet property or do bullet
    properties need to be defined _under_ the headline?
    * a:: Yes! Bullet properties are powerful!
  - 240510#0M This [type:: awesome note] has an inline property.
  
  '''
# ---
# name: test_query[YAMLConfigFile-file_filter_basic]
  '''
  ################################ [[basic]]
  o P3 000102#00 Older todo
  o P3 000103#00 Old todo
  o P3 240510#02 bazbuz is ok too...
  - 240510#00 First note in first block
  - 240510#01 Second note in first block
  
  '''
# ---
# name: test_query[YAMLConfigFile-filter_by_create_and_modify]
  '''
  - 240509 240408#0X Some note with a modify date
  
  '''
# ---
# name: test_query[YAMLConfigFile-filter_by_property_eq]
  '''
  o P3 240510#0K This todo is @due today! | due::2024-03-13
  
  '''
# ---
# name: test_query[YAMLConfigFile-filter_by_property_gt]
  '''
  - 240323#0U +zorg Test against all examples/ files
  - 240323#0V +zorg wip: Replace 'john@' with '%john'
  - 240323#0W +laundry dry whites
  - 240323#0X +zorg wip: migrate people
  - 240323#0Y +zorg Finished 'john@' to '%john' migration
  - 240323#0Z +zorg Updated grammar to handle quotes
  - 240323#0a +laundry wip: fold darks
  - 240323#0b +laundry fold darks
  - 240323#0c +laundry wash delicates
  - 240323#0d +zorg [[xmind/zorg_e2e_query_arch.xmind]]
  
  '''
# ---
# name: test_query[YAMLConfigFile-group_by_context]
  '''
  o P0 240313#03 High Priority TODO
  o P1 240313#04 Medium Priority TODO
  o P2 240313#05 Low Priority TODO
  o P3 000102#00 Older todo
  o P3 000103#00 Old todo
  o P3 240510#02 bazbuz is ok too...
  o P3 240510#07 Some todo
  o P3 240510#08 Another related todo
  o P3 240510#0A Some other todo
  o P3 240510#0N This recurring todo also uses an inline property | [recur::M+Th]
  o P3 240510#1t This todo has checkboxes
    * [X] Done subtask
    * [ ] Open subtask
  o P3 240510#1d This todo is due::2024-03-30 and has some subnotes
  o P3 240510#1w A todo for something
  o P3 240510#21 Some foobar todo.
  o P3 240510#26 Some foobar todo.
  ~ P3 240613 240510#0R A canceled todo with a multiline explanation
    * x:: This todo was not really canceled. It is an example todo used to
      demonstrate a multiline bullet property.
  - 240330#02 This note contains a key::value pair.
  - 240408#N2 Da nah nah nuh...
  - 240510#00 First note in first block
  - 240510#01 Second note in first block
  - 240510#03 Some note with a [[bar.sh]] link to a bash script.
  - 240510#04 Some note with a link in parens (see [[baz]]).
  - 240510#05 Some note with a link in parens and a block-level link ([[buz#fuzz]]).
  - 240510#06 Some note with no targets.
  - 240510#07 Some note that references a local [240510#03] ZID.
  - 240510#08 Some note that references a local [1] link.
  - 240510#09 Some note that references an ID in another file | [#pig_is_gross]
  - 240510#04 Some note with duplicate links, like [[poop]] and [[poop]].
  - 240510#07 Some note that references a ZID in another file. See [240408#0X].
  - 240510#09 A note about life...
  - 240510#0B With a note
  - 240510#0C Some note in section 0
  - 240510#0D Note A1
  - 240510#0E Note A2
  - 240510#0F Note B
  - 240510#0G Note C
  - 240510#0H Note D
  - 240510#0J Note E
  - 240510#0P This note has a single-line bullet property.
    * foo:: bar baz buz
  - 240510#0Q q:: Can a note headline use a bullet property or do bullet
    properties need to be defined _under_ the headline?
    * a:: Yes! Bullet properties are powerful!
  - 240510#0M This [type:: awesome note] has an inline property.
  - 240510#0L Sqtdicu Gfwebkj: fdxd://rd/czge-nxgz-vmuncaf
  - 240510#0M Reqzlu Zkba Inzlqq Zusqxur: pclx://hn/oqdu-syxf-oxzpzp-hxdszea
  - 240510#0N Tzus %clyzajrm: +cmeq ylevgv frxb gevcfp xa 26cb
  - 240510#0P Eongcgfy tho pscz giwq arjebc@?
  - 240510#0R Crxekimyx kq fjboaq:
  - 240510#0T Lcnoajccb Injdqwlf
  - 240510#0U Lrry-Jhfv Nfsw
  - 240510#0V Ga Ewwnanwqgoq
  - 240510#0W Gaonrjmk: Cbnuev, Xvdgisy, Aeyfbb?
  - 240510#0X Vont ywgotqe vndsv (lfqbnlfar, kwmnafb, Yneicgqi/Mxvvkclvzk)
  - 240510#0Y Eyfptapyh ijmfacppn (lqrui ?jr=HF)
  - 240510#0Z Gziien fxfmhul
  - 240510#0a Ajfn dz Rhyt (ty 6499 cw 6075)
  - 240510#0b setw://fq/zfv-haow-micxv
  - 240510#0c sorj
  - 240510#0d bhkh://xzywfi3/relyocplej/dpw/qk/otehzx/qpsiyunh/rgthilw_sldeu/fonvlqflxv/rjluzb/tbf/hrtkdrq_mnurg_eltj_szkb.raja
  - 240510#0e knlo://evfkaz3/kmxgifnodz/wav/nz/idlwsr/oslzcscp/raarqgi_bjfdp/xftsdpbcka/itulza/prk/pkgxzoc_zgntm_txeg_npbvju.jldf
  - 240510#0f ykseciqhy IG: bp/531522711
  - 240510#0h Nyhha trra://hk/wyp-slg-lbyuqz pris oiqf nywj kg smoy nwdraivpht() cu jzusgcwm zwyirs?
  - 240510#0k Wouvp rx cmmi jk zes r kv/u1abtunoeaorevyolmef: "Njwb opjiv wlyvyfrb; tqcwkrs qlawalk: 200F."
  - 240510#0m e2.0 xrestv rlqt cszmjhp: 1) Cnelcge 2) uttnzeu tncj 3) Rasemja zzvilcys
  - 240510#0n Qtvhtfc ywtyvbppqu (qs odvqdfjk nydxt):
  - 240510#0o XC: Wvlotmog | Akjrgluk cck dpvcvia
  - 240510#0r Oers Higwy   | NYS / Cyuxu fyod mrfwalatc
  - 240510#0s Lveg         | Kfvunvqioefmgo Rlqu
  - 240510#0t HU: Yoxlnl   | Kyahuurpzq mt VV (v.u. boh coveshbg rsp hbyhmm-pav)
  - 240510#0u TbuburbQuf zilo hpfu://wz/ytg:hep_epzc_ek_jehnmz?h=omm:cpdu :
      (2576796, 2584174, 2585902, 2611556, 2612222)
  - 240510#0v Kmue izlgeghae jivs kkhoh:
      (23068288959, 23070555923, 23071198233, 23081557400, 23082128453)
  - 240510#0w KU onbf
  - 240510#0x Adah wv wsr: Pwyv qrykrmat
  - 240510#0z Fjdu lk aozqwmt rdtv (ingu yhlzh kha zro zstolomj?): Vujflym
  - 240510#10 Cyuyngz rpzj (<tzcx_zm> nat <iqge_xqu>): Opalekb / Ubq hefcgpa
  - 240510#11 Snke udr djwhji ku iysauiroj (<wtflgi_jw_aykjvl>):
  - 240510#12 Puny mng lomkrpd
  - 240510#13 Eipahnv
  - 240510#14 <olxh_cqe>
  - 240510#15 Fe dxiovcyxz kuirhi: Kjwjjl hxd: <lllwcz_bp_mjklvt>\wZkzuguo/yckqyt: <awqxbdj>
  - 240510#16 Nid bzvqqd gktb uhwgmwk jfiwf atukar oq znzg-htqz bpba?: (<izljyv_dk_ebsiqu>)
  - 240510#17 Poxi hdtlblgq:
  - 240510#18 Uripbc uui qr njuytfkxf
  - 240510#19 Dvfbqlk/ignpsr lb imwgiazpd
  - 240510#1A Rb rnfqqbizlps
  - 240510#1B Wuxpotyb:
  - 240510#1C Me fkf zddkb?
  - 240510#1D An fsqw hdegvhwy?
  - 240510#1E Tyrgbh iwj fcq jjuea qpltzla rkyq br at DS tfvwjwf?
  - 240510#1F Rmy [[eswz_xqow::empiz_ljyiwjbmi_szstj]]
  - 240510#1G nejo/vpe/gjggaa/fwi/kgrtqhtdy/ynbwnm/qekadk/cvhc/MqgomkswAgbkGhthPoqfvqt.ednt
  - 240510#1H qiuz/adb/lhwggp/kqt/ldmqosmbs/qtjvrxutayfiyh/oocyfjbnuih/jmov/faaat/XibsjbhuFsbuRrawDgfksjcXwjudTvvzbxa.vvep
  - 240510#1J Ajbss udcor xf tylgpk:
  - 240510#1K ibmxadcdz.iwmdvsxeg_uxzvuntgl
  - 240510#1L oiuglzpuv.xwhjvfwrs_imjxfgwoo.fvyclrkt_vqycmgeuj_ihblc
  - 240510#1M ycdcddvhw.shmlpcnju_chsokpadf.bcpgad_hoargfl_fhzshiqoe_qrsrxtdsq
  - 240510#1N bpeijqkwt.ysazfxpem_tnpnkohdy.nppowgku_kqhexqeih_njhno
  - 240510#1P uceq://ap/591285707
  - 240510#1T Mcjr bdukfjxm 14521206
  - 240510#1U Spuekgphn 14521428
  - 240510#1V Necywz met td fuvbdooge 14524967
  - 240510#1W Fbtqtkb, fywupn qr mzrgsvqve 14521641
  - 240510#1X Uc lsmpfxhtkyh 14522952
  - 240510#1Y Ikr lr 20 pggmb
  - 240510#1Z Ttx-yecb mxovcuwbc
  - 240510#1a Rzq-itde mpfj
  - 240510#1b Zee-lpfg uqogce bk khxsvgrkq bbgvmf
  - 240510#1c foobar
  - 240510#1e Todo subnote A
  - 240510#1f Todo subnote B
  - 240510#1h Todo subsubnote C
  - 240510#1k This note has many subnotes.
  - 240510#1m This note contains a key::value pair.
  - 240510#1n bazbuz
  - 240510#1o pig
  - 240510#1r is fat
  - 240510#1s is stinky
  - 240510#1t Note about A1
  - 240510#1u Note about something
  - 240510#1v Another note
  - 240510#1x A note on the second section.
  - 240510#1z A sub-note.
  - 240510#20 And another note.
  - 240510#22 This is inside of h4_section!
  - 240510#23 A note on the third section.
  - 240510#24 A sub-note.
  - 240510#25 And another note.
  - 240510#27 This is the final section!
  - 240510#29 Projects can start with a number, but CANNOT be all numbers
  
  ################################ @due
  o P3 240510#0K This todo is @due today! | due::2024-03-13
  
  ################################ @dzwk
  - 240510#1R Git [[desd_cd_kdzb.yhdxx]] hgq lkl[1] @dzwk
  
  ################################ @fat_pig
  - 240408#0X Some note
  - 240509 240408#0X Some note with a modify date
  
  ################################ @fat_pig | @puke
  - 301231#X0 When I talk to %pig I always want to @puke. | id::pig_is_gross
  
  ################################ @footnote
  - 240510#09 id::1 http://www.example.com
  
  ################################ @pomodoro
  - 240323#0J #gtd pomodoro
  - 240323#0K #own Buy rubber duck
  - 240323#0L +zorg Parametrize test_run_compile()
  - 240323#0M +zorg Move models.py and file_groups.py
  - 240323#0N +zorg Add links to grammar
  - 240323#0P +zorg Fix grammar so it works with this file
  - 240323#0R +zorg Add this file to test data
  - 240323#0T +zorg Filter out all numeric tag names
  - 240323#0U +zorg Test against all examples/ files
  - 240323#0V +zorg wip: Replace 'john@' with '%john'
  - 240323#0W +laundry dry whites
  - 240323#0X +zorg wip: migrate people
  - 240323#0Y +zorg Finished 'john@' to '%john' migration
  - 240323#0Z +zorg Updated grammar to handle quotes
  - 240323#0a +laundry wip: fold darks
  - 240323#0b +laundry fold darks
  - 240323#0c +laundry wash delicates
  - 240323#0d +zorg [[xmind/zorg_e2e_query_arch.xmind]]
  
  '''
# ---
# name: test_query[YAMLConfigFile-group_by_people]
  '''
  o P0 240313#03 High Priority TODO
  o P1 240313#04 Medium Priority TODO
  o P2 240313#05 Low Priority TODO
  o P3 000102#00 Older todo
  o P3 000103#00 Old todo
  o P3 240510#02 bazbuz is ok too...
  o P3 240510#07 Some todo
  o P3 240510#08 Another related todo
  o P3 240510#0A Some other todo
  o P3 240510#0K This todo is @due today! | due::2024-03-13
  o P3 240510#0N This recurring todo also uses an inline property | [recur::M+Th]
  o P3 240510#1t This todo has checkboxes
    * [X] Done subtask
    * [ ] Open subtask
  o P3 240510#1d This todo is due::2024-03-30 and has some subnotes
  o P3 240510#1w A todo for something
  o P3 240510#21 Some foobar todo.
  o P3 240510#26 Some foobar todo.
  ~ P3 240613 240510#0R A canceled todo with a multiline explanation
    * x:: This todo was not really canceled. It is an example todo used to
      demonstrate a multiline bullet property.
  - 240323#0J #gtd pomodoro
  - 240323#0K #own Buy rubber duck
  - 240323#0L +zorg Parametrize test_run_compile()
  - 240323#0M +zorg Move models.py and file_groups.py
  - 240323#0N +zorg Add links to grammar
  - 240323#0P +zorg Fix grammar so it works with this file
  - 240323#0R +zorg Add this file to test data
  - 240323#0T +zorg Filter out all numeric tag names
  - 240323#0U +zorg Test against all examples/ files
  - 240323#0V +zorg wip: Replace 'john@' with '%john'
  - 240323#0W +laundry dry whites
  - 240323#0X +zorg wip: migrate people
  - 240323#0Y +zorg Finished 'john@' to '%john' migration
  - 240323#0Z +zorg Updated grammar to handle quotes
  - 240323#0a +laundry wip: fold darks
  - 240323#0b +laundry fold darks
  - 240323#0c +laundry wash delicates
  - 240323#0d +zorg [[xmind/zorg_e2e_query_arch.xmind]]
  - 240330#02 This note contains a key::value pair.
  - 240408#0X Some note
  - 240408#N2 Da nah nah nuh...
  - 240509 240408#0X Some note with a modify date
  - 240510#00 First note in first block
  - 240510#01 Second note in first block
  - 240510#03 Some note with a [[bar.sh]] link to a bash script.
  - 240510#04 Some note with a link in parens (see [[baz]]).
  - 240510#05 Some note with a link in parens and a block-level link ([[buz#fuzz]]).
  - 240510#06 Some note with no targets.
  - 240510#07 Some note that references a local [240510#03] ZID.
  - 240510#08 Some note that references a local [1] link.
  - 240510#09 Some note that references an ID in another file | [#pig_is_gross]
  - 240510#04 Some note with duplicate links, like [[poop]] and [[poop]].
  - 240510#07 Some note that references a ZID in another file. See [240408#0X].
  - 240510#09 id::1 http://www.example.com
  - 240510#09 A note about life...
  - 240510#0B With a note
  - 240510#0C Some note in section 0
  - 240510#0D Note A1
  - 240510#0E Note A2
  - 240510#0F Note B
  - 240510#0G Note C
  - 240510#0H Note D
  - 240510#0J Note E
  - 240510#0P This note has a single-line bullet property.
    * foo:: bar baz buz
  - 240510#0Q q:: Can a note headline use a bullet property or do bullet
    properties need to be defined _under_ the headline?
    * a:: Yes! Bullet properties are powerful!
  - 240510#0M This [type:: awesome note] has an inline property.
  - 240510#0L Sqtdicu Gfwebkj: fdxd://rd/czge-nxgz-vmuncaf
  - 240510#0M Reqzlu Zkba Inzlqq Zusqxur: pclx://hn/oqdu-syxf-oxzpzp-hxdszea
  - 240510#0P Eongcgfy tho pscz giwq arjebc@?
  - 240510#0R Crxekimyx kq fjboaq:
  - 240510#0T Lcnoajccb Injdqwlf
  - 240510#0U Lrry-Jhfv Nfsw
  - 240510#0V Ga Ewwnanwqgoq
  - 240510#0W Gaonrjmk: Cbnuev, Xvdgisy, Aeyfbb?
  - 240510#0X Vont ywgotqe vndsv (lfqbnlfar, kwmnafb, Yneicgqi/Mxvvkclvzk)
  - 240510#0Y Eyfptapyh ijmfacppn (lqrui ?jr=HF)
  - 240510#0Z Gziien fxfmhul
  - 240510#0a Ajfn dz Rhyt (ty 6499 cw 6075)
  - 240510#0b setw://fq/zfv-haow-micxv
  - 240510#0c sorj
  - 240510#0d bhkh://xzywfi3/relyocplej/dpw/qk/otehzx/qpsiyunh/rgthilw_sldeu/fonvlqflxv/rjluzb/tbf/hrtkdrq_mnurg_eltj_szkb.raja
  - 240510#0e knlo://evfkaz3/kmxgifnodz/wav/nz/idlwsr/oslzcscp/raarqgi_bjfdp/xftsdpbcka/itulza/prk/pkgxzoc_zgntm_txeg_npbvju.jldf
  - 240510#0f ykseciqhy IG: bp/531522711
  - 240510#0h Nyhha trra://hk/wyp-slg-lbyuqz pris oiqf nywj kg smoy nwdraivpht() cu jzusgcwm zwyirs?
  - 240510#0k Wouvp rx cmmi jk zes r kv/u1abtunoeaorevyolmef: "Njwb opjiv wlyvyfrb; tqcwkrs qlawalk: 200F."
  - 240510#0m e2.0 xrestv rlqt cszmjhp: 1) Cnelcge 2) uttnzeu tncj 3) Rasemja zzvilcys
  - 240510#0n Qtvhtfc ywtyvbppqu (qs odvqdfjk nydxt):
  - 240510#0o XC: Wvlotmog | Akjrgluk cck dpvcvia
  - 240510#0r Oers Higwy   | NYS / Cyuxu fyod mrfwalatc
  - 240510#0s Lveg         | Kfvunvqioefmgo Rlqu
  - 240510#0t HU: Yoxlnl   | Kyahuurpzq mt VV (v.u. boh coveshbg rsp hbyhmm-pav)
  - 240510#0u TbuburbQuf zilo hpfu://wz/ytg:hep_epzc_ek_jehnmz?h=omm:cpdu :
      (2576796, 2584174, 2585902, 2611556, 2612222)
  - 240510#0v Kmue izlgeghae jivs kkhoh:
      (23068288959, 23070555923, 23071198233, 23081557400, 23082128453)
  - 240510#0w KU onbf
  - 240510#0x Adah wv wsr: Pwyv qrykrmat
  - 240510#0z Fjdu lk aozqwmt rdtv (ingu yhlzh kha zro zstolomj?): Vujflym
  - 240510#10 Cyuyngz rpzj (<tzcx_zm> nat <iqge_xqu>): Opalekb / Ubq hefcgpa
  - 240510#11 Snke udr djwhji ku iysauiroj (<wtflgi_jw_aykjvl>):
  - 240510#12 Puny mng lomkrpd
  - 240510#13 Eipahnv
  - 240510#14 <olxh_cqe>
  - 240510#15 Fe dxiovcyxz kuirhi: Kjwjjl hxd: <lllwcz_bp_mjklvt>\wZkzuguo/yckqyt: <awqxbdj>
  - 240510#16 Nid bzvqqd gktb uhwgmwk jfiwf atukar oq znzg-htqz bpba?: (<izljyv_dk_ebsiqu>)
  - 240510#17 Poxi hdtlblgq:
  - 240510#18 Uripbc uui qr njuytfkxf
  - 240510#19 Dvfbqlk/ignpsr lb imwgiazpd
  - 240510#1A Rb rnfqqbizlps
  - 240510#1B Wuxpotyb:
  - 240510#1C Me fkf zddkb?
  - 240510#1D An fsqw hdegvhwy?
  - 240510#1E Tyrgbh iwj fcq jjuea qpltzla rkyq br at DS tfvwjwf?
  - 240510#1F Rmy [[eswz_xqow::empiz_ljyiwjbmi_szstj]]
  - 240510#1G nejo/vpe/gjggaa/fwi/kgrtqhtdy/ynbwnm/qekadk/cvhc/MqgomkswAgbkGhthPoqfvqt.ednt
  - 240510#1H qiuz/adb/lhwggp/kqt/ldmqosmbs/qtjvrxutayfiyh/oocyfjbnuih/jmov/faaat/XibsjbhuFsbuRrawDgfksjcXwjudTvvzbxa.vvep
  - 240510#1J Ajbss udcor xf tylgpk:
  - 240510#1K ibmxadcdz.iwmdvsxeg_uxzvuntgl
  - 240510#1L oiuglzpuv.xwhjvfwrs_imjxfgwoo.fvyclrkt_vqycmgeuj_ihblc
  - 240510#1M ycdcddvhw.shmlpcnju_chsokpadf.bcpgad_hoargfl_fhzshiqoe_qrsrxtdsq
  - 240510#1N bpeijqkwt.ysazfxpem_tnpnkohdy.nppowgku_kqhexqeih_njhno
  - 240510#1P uceq://ap/591285707
  - 240510#1R Git [[desd_cd_kdzb.yhdxx]] hgq lkl[1] @dzwk
  - 240510#1T Mcjr bdukfjxm 14521206
  - 240510#1U Spuekgphn 14521428
  - 240510#1V Necywz met td fuvbdooge 14524967
  - 240510#1W Fbtqtkb, fywupn qr mzrgsvqve 14521641
  - 240510#1X Uc lsmpfxhtkyh 14522952
  - 240510#1Y Ikr lr 20 pggmb
  - 240510#1Z Ttx-yecb mxovcuwbc
  - 240510#1a Rzq-itde mpfj
  - 240510#1b Zee-lpfg uqogce bk khxsvgrkq bbgvmf
  - 240510#1c foobar
  - 240510#1e Todo subnote A
  - 240510#1f Todo subnote B
  - 240510#1h Todo subsubnote C
  - 240510#1k This note has many subnotes.
  - 240510#1m This note contains a key::value pair.
  - 240510#1n bazbuz
  - 240510#1o pig
  - 240510#1r is fat
  - 240510#1s is stinky
  - 240510#1t Note about A1
  - 240510#1u Note about something
  - 240510#1v Another note
  - 240510#1x A note on the second section.
  - 240510#1z A sub-note.
  - 240510#20 And another note.
  - 240510#22 This is inside of h4_section!
  - 240510#23 A note on the third section.
  - 240510#24 A sub-note.
  - 240510#25 And another note.
  - 240510#27 This is the final section!
  - 240510#29 Projects can start with a number, but CANNOT be all numbers
  
  ################################ %clyzajrm
  - 240510#0N Tzus %clyzajrm: +cmeq ylevgv frxb gevcfp xa 26cb
  
  ################################ %pig
  - 301231#X0 When I talk to %pig I always want to @puke. | id::pig_is_gross
  
  '''
# ---
# name: test_query[YAMLConfigFile-group_by_type_area_project]
  '''
  ################################ 1 | OPEN TODOS
  o P0 240313#03 High Priority TODO
  o P1 240313#04 Medium Priority TODO
  o P2 240313#05 Low Priority TODO
  o P3 000102#00 Older todo
  o P3 000103#00 Old todo
  o P3 240510#02 bazbuz is ok too...
  o P3 240510#07 Some todo
  o P3 240510#08 Another related todo
  o P3 240510#0A Some other todo
  o P3 240510#0K This todo is @due today! | due::2024-03-13
  o P3 240510#0N This recurring todo also uses an inline property | [recur::M+Th]
  o P3 240510#1t This todo has checkboxes
    * [X] Done subtask
    * [ ] Open subtask
  o P3 240510#1d This todo is due::2024-03-30 and has some subnotes
  o P3 240510#1w A todo for something
  o P3 240510#21 Some foobar todo.
  o P3 240510#26 Some foobar todo.
  
  
  ################################ 3 | CANCELED TODOS
  ~ P3 240613 240510#0R A canceled todo with a multiline explanation
    * x:: This todo was not really canceled. It is an example todo used to
      demonstrate a multiline bullet property.
  
  
  ################################ 4 | NOTES
  - 240330#02 This note contains a key::value pair.
  - 240510#00 First note in first block
  - 240510#01 Second note in first block
  - 240510#03 Some note with a [[bar.sh]] link to a bash script.
  - 240510#04 Some note with a link in parens (see [[baz]]).
  - 240510#05 Some note with a link in parens and a block-level link ([[buz#fuzz]]).
  - 240510#06 Some note with no targets.
  - 240510#07 Some note that references a local [240510#03] ZID.
  - 240510#08 Some note that references a local [1] link.
  - 240510#09 Some note that references an ID in another file | [#pig_is_gross]
  - 240510#04 Some note with duplicate links, like [[poop]] and [[poop]].
  - 240510#07 Some note that references a ZID in another file. See [240408#0X].
  - 240510#09 id::1 http://www.example.com
  - 240510#09 A note about life...
  - 240510#0B With a note
  - 240510#0C Some note in section 0
  - 240510#0D Note A1
  - 240510#0E Note A2
  - 240510#0F Note B
  - 240510#0G Note C
  - 240510#0H Note D
  - 240510#0J Note E
  - 240510#0P This note has a single-line bullet property.
    * foo:: bar baz buz
  - 240510#0Q q:: Can a note headline use a bullet property or do bullet
    properties need to be defined _under_ the headline?
    * a:: Yes! Bullet properties are powerful!
  - 240510#0M This [type:: awesome note] has an inline property.
  - 240510#1c foobar
  - 240510#1e Todo subnote A
  - 240510#1f Todo subnote B
  - 240510#1h Todo subsubnote C
  - 240510#1k This note has many subnotes.
  - 240510#1m This note contains a key::value pair.
  - 240510#1n bazbuz
  - 240510#1o pig
  - 240510#1r is fat
  - 240510#1s is stinky
  - 240510#1t Note about A1
  - 240510#1u Note about something
  - 240510#1v Another note
  - 240510#1x A note on the second section.
  - 240510#1z A sub-note.
  - 240510#20 And another note.
  - 240510#22 This is inside of h4_section!
  - 240510#23 A note on the third section.
  - 240510#24 A sub-note.
  - 240510#25 And another note.
  - 240510#27 This is the final section!
  
  ++++++++++++++++ +arms
  - 240510#0L Sqtdicu Gfwebkj: fdxd://rd/czge-nxgz-vmuncaf
  - 240510#0M Reqzlu Zkba Inzlqq Zusqxur: pclx://hn/oqdu-syxf-oxzpzp-hxdszea
  
  ++++++++++++++++ +arms | +bmlakcr
  - 240510#0h Nyhha trra://hk/wyp-slg-lbyuqz pris oiqf nywj kg smoy nwdraivpht() cu jzusgcwm zwyirs?
  
  ++++++++++++++++ +arms | +bmlakcr | +lozmhqjd
  - 240510#0k Wouvp rx cmmi jk zes r kv/u1abtunoeaorevyolmef: "Njwb opjiv wlyvyfrb; tqcwkrs qlawalk: 200F."
  
  ++++++++++++++++ +arms | +bmlakcr | +wjybwa
  - 240510#0m e2.0 xrestv rlqt cszmjhp: 1) Cnelcge 2) uttnzeu tncj 3) Rasemja zzvilcys
  - 240510#0n Qtvhtfc ywtyvbppqu (qs odvqdfjk nydxt):
  - 240510#0o XC: Wvlotmog | Akjrgluk cck dpvcvia
  - 240510#0r Oers Higwy   | NYS / Cyuxu fyod mrfwalatc
  - 240510#0s Lveg         | Kfvunvqioefmgo Rlqu
  - 240510#0t HU: Yoxlnl   | Kyahuurpzq mt VV (v.u. boh coveshbg rsp hbyhmm-pav)
  
  ++++++++++++++++ +arms | +bqf | +cpv_mociy | +ipyt
  - 240510#1J Ajbss udcor xf tylgpk:
  - 240510#1K ibmxadcdz.iwmdvsxeg_uxzvuntgl
  - 240510#1L oiuglzpuv.xwhjvfwrs_imjxfgwoo.fvyclrkt_vqycmgeuj_ihblc
  - 240510#1M ycdcddvhw.shmlpcnju_chsokpadf.bcpgad_hoargfl_fhzshiqoe_qrsrxtdsq
  - 240510#1N bpeijqkwt.ysazfxpem_tnpnkohdy.nppowgku_kqhexqeih_njhno
  
  ++++++++++++++++ +arms | +bqf | +ipyt | +uahi
  - 240510#1P uceq://ap/591285707
  
  ++++++++++++++++ +arms | +cmeq
  - 240510#0N Tzus %clyzajrm: +cmeq ylevgv frxb gevcfp xa 26cb
  
  ++++++++++++++++ +arms | +fgifr
  - 240510#1Y Ikr lr 20 pggmb
  - 240510#1Z Ttx-yecb mxovcuwbc
  - 240510#1a Rzq-itde mpfj
  - 240510#1b Zee-lpfg uqogce bk khxsvgrkq bbgvmf
  
  ++++++++++++++++ +arms | +judo | +vennc
  - 240510#0f ykseciqhy IG: bp/531522711
  
  ++++++++++++++++ +arms | +judo | +vfntwi
  - 240510#0b setw://fq/zfv-haow-micxv
  - 240510#0c sorj
  - 240510#0d bhkh://xzywfi3/relyocplej/dpw/qk/otehzx/qpsiyunh/rgthilw_sldeu/fonvlqflxv/rjluzb/tbf/hrtkdrq_mnurg_eltj_szkb.raja
  - 240510#0e knlo://evfkaz3/kmxgifnodz/wav/nz/idlwsr/oslzcscp/raarqgi_bjfdp/xftsdpbcka/itulza/prk/pkgxzoc_zgntm_txeg_npbvju.jldf
  
  ++++++++++++++++ +arms | +jws_pkaft
  - 240510#0u TbuburbQuf zilo hpfu://wz/ytg:hep_epzc_ek_jehnmz?h=omm:cpdu :
      (2576796, 2584174, 2585902, 2611556, 2612222)
  - 240510#0v Kmue izlgeghae jivs kkhoh:
      (23068288959, 23070555923, 23071198233, 23081557400, 23082128453)
  
  ++++++++++++++++ +arms | +okwz | +vd_clxi
  - 240510#1T Mcjr bdukfjxm 14521206
  - 240510#1U Spuekgphn 14521428
  - 240510#1V Necywz met td fuvbdooge 14524967
  - 240510#1W Fbtqtkb, fywupn qr mzrgsvqve 14521641
  - 240510#1X Uc lsmpfxhtkyh 14522952
  
  ++++++++++++++++ +arms | +owwnfb | +qbsum
  - 240510#0w KU onbf
  - 240510#0x Adah wv wsr: Pwyv qrykrmat
  - 240510#0z Fjdu lk aozqwmt rdtv (ingu yhlzh kha zro zstolomj?): Vujflym
  - 240510#10 Cyuyngz rpzj (<tzcx_zm> nat <iqge_xqu>): Opalekb / Ubq hefcgpa
  - 240510#11 Snke udr djwhji ku iysauiroj (<wtflgi_jw_aykjvl>):
  - 240510#12 Puny mng lomkrpd
  - 240510#13 Eipahnv
  - 240510#14 <olxh_cqe>
  - 240510#15 Fe dxiovcyxz kuirhi: Kjwjjl hxd: <lllwcz_bp_mjklvt>\wZkzuguo/yckqyt: <awqxbdj>
  - 240510#16 Nid bzvqqd gktb uhwgmwk jfiwf atukar oq znzg-htqz bpba?: (<izljyv_dk_ebsiqu>)
  - 240510#17 Poxi hdtlblgq:
  - 240510#18 Uripbc uui qr njuytfkxf
  - 240510#19 Dvfbqlk/ignpsr lb imwgiazpd
  - 240510#1A Rb rnfqqbizlps
  - 240510#1B Wuxpotyb:
  - 240510#1C Me fkf zddkb?
  - 240510#1D An fsqw hdegvhwy?
  - 240510#1E Tyrgbh iwj fcq jjuea qpltzla rkyq br at DS tfvwjwf?
  
  ++++++++++++++++ +arms | +rgw_sxtvx
  - 240510#1F Rmy [[eswz_xqow::empiz_ljyiwjbmi_szstj]]
  
  ++++++++++++++++ +arms | +rgw_sxtvx | +zv_jzdd_djqa
  - 240510#1G nejo/vpe/gjggaa/fwi/kgrtqhtdy/ynbwnm/qekadk/cvhc/MqgomkswAgbkGhthPoqfvqt.ednt
  - 240510#1H qiuz/adb/lhwggp/kqt/ldmqosmbs/qtjvrxutayfiyh/oocyfjbnuih/jmov/faaat/XibsjbhuFsbuRrawDgfksjcXwjudTvvzbxa.vvep
  
  ++++++++++++++++ +arms | +saxy
  - 240510#0P Eongcgfy tho pscz giwq arjebc@?
  - 240510#0R Crxekimyx kq fjboaq:
  - 240510#0T Lcnoajccb Injdqwlf
  - 240510#0U Lrry-Jhfv Nfsw
  - 240510#0V Ga Ewwnanwqgoq
  - 240510#0W Gaonrjmk: Cbnuev, Xvdgisy, Aeyfbb?
  - 240510#0X Vont ywgotqe vndsv (lfqbnlfar, kwmnafb, Yneicgqi/Mxvvkclvzk)
  - 240510#0Y Eyfptapyh ijmfacppn (lqrui ?jr=HF)
  - 240510#0Z Gziien fxfmhul
  - 240510#0a Ajfn dz Rhyt (ty 6499 cw 6075)
  
  ++++++++++++++++ +arms | +vd_clxi | +xoao
  - 240510#1R Git [[desd_cd_kdzb.yhdxx]] hgq lkl[1] @dzwk
  
  ++++++++++++++++ +laundry
  - 240323#0W +laundry dry whites
  - 240323#0a +laundry wip: fold darks
  - 240323#0b +laundry fold darks
  - 240323#0c +laundry wash delicates
  
  ++++++++++++++++ +zorg
  - 240323#0L +zorg Parametrize test_run_compile()
  - 240323#0M +zorg Move models.py and file_groups.py
  - 240323#0N +zorg Add links to grammar
  - 240323#0P +zorg Fix grammar so it works with this file
  - 240323#0R +zorg Add this file to test data
  - 240323#0T +zorg Filter out all numeric tag names
  - 240323#0U +zorg Test against all examples/ files
  - 240323#0V +zorg wip: Replace 'john@' with '%john'
  - 240323#0X +zorg wip: migrate people
  - 240323#0Y +zorg Finished 'john@' to '%john' migration
  - 240323#0Z +zorg Updated grammar to handle quotes
  - 240323#0d +zorg [[xmind/zorg_e2e_query_arch.xmind]]
  
  ======================== #gtd
  - 240323#0J #gtd pomodoro
  
  ======================== #own
  - 240323#0K #own Buy rubber duck
  
  ======================== #tags
  ++++++++++++++++ +2_be_or_not_2_be | +bad
  - 240510#29 Projects can start with a number, but CANNOT be all numbers
  
  ++++++++++++++++ +bad | +to_the_bone
  - 240408#N2 Da nah nah nuh...
  
  ++++++++++++++++ +foobar
  - 240408#0X Some note
  - 240509 240408#0X Some note with a modify date
  
  ======================== #tags | #thoughts
  ++++++++++++++++ +bazbuz | +foobar
  - 301231#X0 When I talk to %pig I always want to @puke. | id::pig_is_gross
  
  '''
# ---
# name: test_query[YAMLConfigFile-grouped_and_ordered]
  '''
  ################################ [[20240323]]
  - 240323#0J #gtd pomodoro
  - 240323#0K #own Buy rubber duck
  - 240323#0L +zorg Parametrize test_run_compile()
  - 240323#0M +zorg Move models.py and file_groups.py
  - 240323#0N +zorg Add links to grammar
  - 240323#0P +zorg Fix grammar so it works with this file
  - 240323#0R +zorg Add this file to test data
  - 240323#0T +zorg Filter out all numeric tag names
  - 240323#0U +zorg Test against all examples/ files
  - 240323#0V +zorg wip: Replace 'john@' with '%john'
  - 240323#0W +laundry dry whites
  - 240323#0X +zorg wip: migrate people
  - 240323#0Y +zorg Finished 'john@' to '%john' migration
  - 240323#0Z +zorg Updated grammar to handle quotes
  - 240323#0a +laundry wip: fold darks
  - 240323#0b +laundry fold darks
  - 240323#0c +laundry wash delicates
  - 240323#0d +zorg [[xmind/zorg_e2e_query_arch.xmind]]
  
  ################################ [[basic]]
  - 240510#00 First note in first block
  - 240510#01 Second note in first block
  o P3 000102#00 Older todo
  o P3 000103#00 Old todo
  o P3 240510#02 bazbuz is ok too...
  
  ################################ [[links]]
  - 240510#03 Some note with a [[bar.sh]] link to a bash script.
  - 240510#04 Some note with a link in parens (see [[baz]]).
  - 240510#05 Some note with a link in parens and a block-level link ([[buz#fuzz]]).
  - 240510#06 Some note with no targets.
  - 240510#07 Some note that references a local [240510#03] ZID.
  - 240510#08 Some note that references a local [1] link.
  - 240510#09 Some note that references an ID in another file | [#pig_is_gross]
  - 240510#04 Some note with duplicate links, like [[poop]] and [[poop]].
  - 240510#07 Some note that references a ZID in another file. See [240408#0X].
  - 240510#09 id::1 http://www.example.com
  
  ################################ [[multiblocks]]
  - 240510#09 A note about life...
  - 240510#0B With a note
  - 240510#0C Some note in section 0
  - 240510#0D Note A1
  - 240510#0E Note A2
  - 240510#0F Note B
  - 240510#0G Note C
  - 240510#0H Note D
  - 240510#0J Note E
  o P3 240510#07 Some todo
  o P3 240510#08 Another related todo
  o P3 240510#0A Some other todo
  
  ################################ [[priority]]
  o P0 240313#03 High Priority TODO
  o P1 240313#04 Medium Priority TODO
  o P2 240313#05 Low Priority TODO
  
  ################################ [[property]]
  - 240330#02 This note contains a key::value pair.
  - 240510#0P This note has a single-line bullet property.
    * foo:: bar baz buz
  - 240510#0Q q:: Can a note headline use a bullet property or do bullet
    properties need to be defined _under_ the headline?
    * a:: Yes! Bullet properties are powerful!
  - 240510#0M This [type:: awesome note] has an inline property.
  o P3 240510#0K This todo is @due today! | due::2024-03-13
  o P3 240510#0N This recurring todo also uses an inline property | [recur::M+Th]
  ~ P3 240613 240510#0R A canceled todo with a multiline explanation
    * x:: This todo was not really canceled. It is an example todo used to
      demonstrate a multiline bullet property.
  
  ################################ [[scrambled_prj_notes]]
  - 240510#0L Sqtdicu Gfwebkj: fdxd://rd/czge-nxgz-vmuncaf
  - 240510#0M Reqzlu Zkba Inzlqq Zusqxur: pclx://hn/oqdu-syxf-oxzpzp-hxdszea
  - 240510#0N Tzus %clyzajrm: +cmeq ylevgv frxb gevcfp xa 26cb
  - 240510#0P Eongcgfy tho pscz giwq arjebc@?
  - 240510#0R Crxekimyx kq fjboaq:
  - 240510#0T Lcnoajccb Injdqwlf
  - 240510#0U Lrry-Jhfv Nfsw
  - 240510#0V Ga Ewwnanwqgoq
  - 240510#0W Gaonrjmk: Cbnuev, Xvdgisy, Aeyfbb?
  - 240510#0X Vont ywgotqe vndsv (lfqbnlfar, kwmnafb, Yneicgqi/Mxvvkclvzk)
  - 240510#0Y Eyfptapyh ijmfacppn (lqrui ?jr=HF)
  - 240510#0Z Gziien fxfmhul
  - 240510#0a Ajfn dz Rhyt (ty 6499 cw 6075)
  - 240510#0b setw://fq/zfv-haow-micxv
  - 240510#0c sorj
  - 240510#0d bhkh://xzywfi3/relyocplej/dpw/qk/otehzx/qpsiyunh/rgthilw_sldeu/fonvlqflxv/rjluzb/tbf/hrtkdrq_mnurg_eltj_szkb.raja
  - 240510#0e knlo://evfkaz3/kmxgifnodz/wav/nz/idlwsr/oslzcscp/raarqgi_bjfdp/xftsdpbcka/itulza/prk/pkgxzoc_zgntm_txeg_npbvju.jldf
  - 240510#0f ykseciqhy IG: bp/531522711
  - 240510#0h Nyhha trra://hk/wyp-slg-lbyuqz pris oiqf nywj kg smoy nwdraivpht() cu jzusgcwm zwyirs?
  - 240510#0k Wouvp rx cmmi jk zes r kv/u1abtunoeaorevyolmef: "Njwb opjiv wlyvyfrb; tqcwkrs qlawalk: 200F."
  - 240510#0m e2.0 xrestv rlqt cszmjhp: 1) Cnelcge 2) uttnzeu tncj 3) Rasemja zzvilcys
  - 240510#0n Qtvhtfc ywtyvbppqu (qs odvqdfjk nydxt):
  - 240510#0o XC: Wvlotmog | Akjrgluk cck dpvcvia
  - 240510#0r Oers Higwy   | NYS / Cyuxu fyod mrfwalatc
  - 240510#0s Lveg         | Kfvunvqioefmgo Rlqu
  - 240510#0t HU: Yoxlnl   | Kyahuurpzq mt VV (v.u. boh coveshbg rsp hbyhmm-pav)
  - 240510#0u TbuburbQuf zilo hpfu://wz/ytg:hep_epzc_ek_jehnmz?h=omm:cpdu :
      (2576796, 2584174, 2585902, 2611556, 2612222)
  - 240510#0v Kmue izlgeghae jivs kkhoh:
      (23068288959, 23070555923, 23071198233, 23081557400, 23082128453)
  - 240510#0w KU onbf
  - 240510#0x Adah wv wsr: Pwyv qrykrmat
  - 240510#0z Fjdu lk aozqwmt rdtv (ingu yhlzh kha zro zstolomj?): Vujflym
  - 240510#10 Cyuyngz rpzj (<tzcx_zm> nat <iqge_xqu>): Opalekb / Ubq hefcgpa
  - 240510#11 Snke udr djwhji ku iysauiroj (<wtflgi_jw_aykjvl>):
  - 240510#12 Puny mng lomkrpd
  - 240510#13 Eipahnv
  - 240510#14 <olxh_cqe>
  - 240510#15 Fe dxiovcyxz kuirhi: Kjwjjl hxd: <lllwcz_bp_mjklvt>\wZkzuguo/yckqyt: <awqxbdj>
  - 240510#16 Nid bzvqqd gktb uhwgmwk jfiwf atukar oq znzg-htqz bpba?: (<izljyv_dk_ebsiqu>)
  - 240510#17 Poxi hdtlblgq:
  - 240510#18 Uripbc uui qr njuytfkxf
  - 240510#19 Dvfbqlk/ignpsr lb imwgiazpd
  - 240510#1A Rb rnfqqbizlps
  - 240510#1B Wuxpotyb:
  - 240510#1C Me fkf zddkb?
  - 240510#1D An fsqw hdegvhwy?
  - 240510#1E Tyrgbh iwj fcq jjuea qpltzla rkyq br at DS tfvwjwf?
  - 240510#1F Rmy [[eswz_xqow::empiz_ljyiwjbmi_szstj]]
  - 240510#1G nejo/vpe/gjggaa/fwi/kgrtqhtdy/ynbwnm/qekadk/cvhc/MqgomkswAgbkGhthPoqfvqt.ednt
  - 240510#1H qiuz/adb/lhwggp/kqt/ldmqosmbs/qtjvrxutayfiyh/oocyfjbnuih/jmov/faaat/XibsjbhuFsbuRrawDgfksjcXwjudTvvzbxa.vvep
  - 240510#1J Ajbss udcor xf tylgpk:
  - 240510#1K ibmxadcdz.iwmdvsxeg_uxzvuntgl
  - 240510#1L oiuglzpuv.xwhjvfwrs_imjxfgwoo.fvyclrkt_vqycmgeuj_ihblc
  - 240510#1M ycdcddvhw.shmlpcnju_chsokpadf.bcpgad_hoargfl_fhzshiqoe_qrsrxtdsq
  - 240510#1N bpeijqkwt.ysazfxpem_tnpnkohdy.nppowgku_kqhexqeih_njhno
  - 240510#1P uceq://ap/591285707
  - 240510#1R Git [[desd_cd_kdzb.yhdxx]] hgq lkl[1] @dzwk
  - 240510#1T Mcjr bdukfjxm 14521206
  - 240510#1U Spuekgphn 14521428
  - 240510#1V Necywz met td fuvbdooge 14524967
  - 240510#1W Fbtqtkb, fywupn qr mzrgsvqve 14521641
  - 240510#1X Uc lsmpfxhtkyh 14522952
  - 240510#1Y Ikr lr 20 pggmb
  - 240510#1Z Ttx-yecb mxovcuwbc
  - 240510#1a Rzq-itde mpfj
  - 240510#1b Zee-lpfg uqogce bk khxsvgrkq bbgvmf
  
  ################################ [[subnotes]]
  - 240510#1c foobar
  - 240510#1e Todo subnote A
  - 240510#1f Todo subnote B
  - 240510#1h Todo subsubnote C
  - 240510#1k This note has many subnotes.
  - 240510#1m This note contains a key::value pair.
  - 240510#1n bazbuz
  - 240510#1o pig
  - 240510#1r is fat
  - 240510#1s is stinky
  o P3 240510#1t This todo has checkboxes
    * [X] Done subtask
    * [ ] Open subtask
  o P3 240510#1d This todo is due::2024-03-30 and has some subnotes
  
  ################################ [[subsections]]
  - 240510#1t Note about A1
  - 240510#1u Note about something
  - 240510#1v Another note
  - 240510#1x A note on the second section.
  - 240510#1z A sub-note.
  - 240510#20 And another note.
  - 240510#22 This is inside of h4_section!
  - 240510#23 A note on the third section.
  - 240510#24 A sub-note.
  - 240510#25 And another note.
  - 240510#27 This is the final section!
  o P3 240510#1w A todo for something
  o P3 240510#21 Some foobar todo.
  o P3 240510#26 Some foobar todo.
  
  ################################ [[tags_and_ids]]
  - 240408#0X Some note
  - 240408#N2 Da nah nah nuh...
  - 240509 240408#0X Some note with a modify date
  - 240510#29 Projects can start with a number, but CANNOT be all numbers
  - 301231#X0 When I talk to %pig I always want to @puke. | id::pig_is_gross
  
  '''
# ---
# name: test_query[YAMLConfigFile-high_priority]
  '''
  o P0 240313#03 High Priority TODO
  
  '''
# ---
# name: test_query[YAMLConfigFile-link_filter__buz]
  '''
  - 240510#05 Some note with a link in parens and a block-level link ([[buz#fuzz]]).
  
  '''
# ---
# name: test_query[YAMLConfigFile-link_filter__tags_and_ids]
  '''
  - 240510#09 Some note that references an ID in another file | [#pig_is_gross]
  - 240510#07 Some note that references a ZID in another file. See [240408#0X].
  
  '''
# ---
# name: test_query[YAMLConfigFile-mid_and_low_priority]
  '''
  o P1 240313#04 Medium Priority TODO
  o P2 240313#05 Low Priority TODO
  
  '''
# ---
# name: test_query[YAMLConfigFile-not_scrambled_file_AND_no_e_in_desc]
  '''
  ################################ [[20240323]]
  - 240323#0J #gtd pomodoro
  - 240323#0N +zorg Add links to grammar
  - 240323#0a +laundry wip: fold darks
  - 240323#0b +laundry fold darks
  
  ################################ [[basic]]
  o P3 000103#00 Old todo
  o P3 240510#02 bazbuz is ok too...
  
  ################################ [[priority]]
  o P0 240313#03 High Priority TODO
  o P2 240313#05 Low Priority TODO
  
  ################################ [[subnotes]]
  - 240510#1c foobar
  - 240510#1n bazbuz
  - 240510#1o pig
  - 240510#1r is fat
  - 240510#1s is stinky
  
  ################################ [[tags_and_ids]]
  - 240408#N2 Da nah nah nuh...
  
  '''
# ---
# name: test_query[YAMLConfigFile-open_todos]
  '''
  o P0 240313#03 High Priority TODO
  o P1 240313#04 Medium Priority TODO
  o P2 240313#05 Low Priority TODO
  o P3 000102#00 Older todo
  o P3 000103#00 Old todo
  o P3 240510#02 bazbuz is ok too...
  o P3 240510#07 Some todo
  o P3 240510#08 Another related todo
  o P3 240510#0A Some other todo
  o P3 240510#0K This todo is @due today! | due::2024-03-13
  o P3 240510#0N This recurring todo also uses an inline property | [recur::M+Th]
  o P3 240510#1t This todo has checkboxes
    * [X] Done subtask
    * [ ] Open subtask
  o P3 240510#1d This todo is due::2024-03-30 and has some subnotes
  o P3 240510#1w A todo for something
  o P3 240510#21 Some foobar todo.
  o P3 240510#26 Some foobar todo.
  
  '''
# ---
# name: test_query[YAMLConfigFile-relative_date]
  '''
  ################################ [[basic]]
  o P3 000103#00 Old todo
  
  '''
# ---
# name: test_query[YAMLConfigFile-relative_date_range]
  '''
  ################################ [[basic]]
  o P3 000102#00 Older todo
  o P3 000103#00 Old todo
  
  '''
# ---
# name: test_query[YAMLConfigFile-select_files_with_todos]
  '''
  basic.zo
  multiblocks.zo
  priority.zo
  property.zo
  subnotes.zo
  subsections.zo
  
  '''
# ---
# name: test_query[YAMLConfigFile-select_projects]
  '''
  2_be_or_not_2_be
  arms
  bad
  bazbuz
  bmlakcr
  bqf
  cmeq
  cpv_mociy
  fgifr
  foobar
  ipyt
  judo
  jws_pkaft
  laundry
  lozmhqjd
  okwz
  owwnfb
  qbsum
  rgw_sxtvx
  saxy
  to_the_bone
  uahi
  vd_clxi
  vennc
  vfntwi
  wjybwa
  xoao
  zorg
  zv_jzdd_djqa
  
  '''
# ---
# name: test_query[YAMLConfigFile-zorg_notes]
  '''
  ################################ [[20240323]]
  - 240323#0L +zorg Parametrize test_run_compile()
  - 240323#0M +zorg Move models.py and file_groups.py
  - 240323#0N +zorg Add links to grammar
  - 240323#0P +zorg Fix grammar so it works with this file
  - 240323#0R +zorg Add this file to test data
  - 240323#0T +zorg Filter out all numeric tag names
  - 240323#0U +zorg Test against all examples/ files
  - 240323#0V +zorg wip: Replace 'john@' with '%john'
  - 240323#0X +zorg wip: migrate people
  - 240323#0Y +zorg Finished 'john@' to '%john' migration
  - 240323#0Z +zorg Updated grammar to handle quotes
  - 240323#0d +zorg [[xmind/zorg_e2e_query_arch.xmind]]
  
  '''
# ---
